[package]
name = "ledger_ffi"
version = "0.0.2"
edition = "2021"

[lib]
name = "ledger_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
allo-isolate = "0.1.12"
lazy_static = "1.4.0"
ledger-transport-hid = { git = "https://github.com/Progressive-Mobile/ledger-rs.git" }
ledger-transport = { git = "https://github.com/Progressive-Mobile/ledger-rs.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
tokio = { version = "1.17.0", features = [ "rt-multi-thread", "sync" ] }